eyedbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyedb
  labels:
    app: eyedb
spec:
  selector:
    matchLabels:
      app: eyedb
  replicas: 1
  template:
    metadata:
      labels:
        app: eyedb
    spec:
      containers:
        - name: eyedb
          image: mongo
          volumeMounts:
            - mountPath: /var/lib/mongodb
              name: eye-db-data
          ports:
            - containerPort: 27017
              name: eyedb-port
      volumes:
      - name: eye-db-data
        persistentVolumeClaim:
          claimName: my-pvc

      # nodeSelector:
      #   zone: us-east-1a  # to indicate which zone we want our pods to run, should be same with the zone our volume is.
