eyeappsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eye-service
spec:
  ports:
    - port: 80
      targetPort: eyeapp-port
      protocol: TCP
  type: ClusterIP
  selector:
    app: eyeapp
