eyedbsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-db
spec:
  ports:
    - port: 27017
      targetPort: eyedb-port
      protocol: TCP
  type: ClusterIP
  selector:
    app: eyedb
