eyeserverdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  ports:
    - port: 80
      targetPort: eyeserver-port
      protocol: TCP
  type: ClusterIP
  selector:
    app: eyeserver
