eyeingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eye-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: eye.vprofile.cloudradar.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 80
    - host: front.vprofile.cloudradar.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eye-service
                port:
                  number: 80
